--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-
+    <!-- header start  -->
     <header>
 
         <!-- navbar start  -->
@@ -57,6 +57,56 @@
         </nav>
         <!-- navbar end  -->
     </header>
+
+    <!-- header end  -->
+
+    <!-- footer start  -->
+    <footer>
+        <div class="py-5">
+            <div class="row row-cols-4">
+                <div class="col">
+                    <h3>Support</h3>
+                    <p class="mt-3">FAQ</p>
+                    <p>Terms and Conditions</p>
+                </div>
+                <div class="col download">
+                    <h3>Download</h3>
+                    <img src="./images/footer/google_play_store.png" class="img-fluid" width="137" height="137"
+                        alt="google play store">
+                </div>
+                <div class="col text-center">
+                    <h3>Get in Touch</h3>
+                    <div class="mt-3">
+                        <span class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span>
+                        <span class="social-icon"><i class="fa fa-youtube" aria-hidden="true"></i></span>
+                        <span class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span>
+                    </div>
+                </div>
+                <div class="col contact">
+                    <h3>Contact Us</h3>
+                    <div class="row mt-3">
+                        <div class="col-1"><i class="fa-solid fa-location-dot"></i></div>
+                        <div class="col-11">
+                            <p>House # 30, Road # 4, PC Culture Housing, Mohammadpur , Dhaka-1207</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1"><i class="fa-regular fa-envelope me-1"></i></div>
+                        <div class="col-11">
+                            <p>zeteexpress@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1"><i class="fa-solid fa-phone-volume me-1"></i></div>
+                        <div class="col-11">
+                            <p>+8801916-888816</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer end  -->
 
 
 
