feature section is added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,81 @@
 
     <!-- header end  -->
 
+
+    <!-- main part start  -->
+    <main>
+        <section class="feature-section mt-5">
+            <h3 class="text-center">Why Choose Us</h3>
+
+            <div class="features container">
+                <div class="row row-cols-3">
+                    <!-- feature 1 -->
+                    <div class="card text-center mb-3">
+                        <div class="card-body">
+                            <img class="img-fluid" src="./images//features/flag.png" width="55" height="57" alt="img">
+                            <p class="card-text">"Lowest rate delivery facility across the country including Dhaka city,
+                                delivery within 12 to 24 hours within Dhaka"
+                            </p>
+
+                        </div>
+                    </div>
+
+                    <!-- feature 2 -->
+                    <div class="card text-center mb-3">
+                        <div class="card-body">
+                            <img class="img-fluid mt-4" src="./images//features/destination.png" width="55" height="57"
+                                alt="img">
+                            <p class="card-text">"Doorstep Pick Up & Delivery Facility"
+                            </p>
+
+                        </div>
+                    </div>
+
+                    <!-- feature 3 -->
+                    <div class="card text-center mb-3">
+                        <div class="card-body">
+                            <img class="img-fluid" src="./images//features/location.png" width="47" height="40"
+                                alt="img">
+                            <p class="card-text">"We have online parcel tracking facility"
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- feature 4 -->
+                    <div class="card text-center mb-3">
+                        <div class="card-body">
+                            <img class="img-fluid" src="./images//features/money.png" width="55" height="55" alt="img">
+                            <p class="card-text">"Payment seven days a week including Friday Saturday - Bank or Bikash,
+                                Cash, Rocket"
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- feature 5 -->
+                    <div class="card text-center mb-3">
+                        <div class="card-body">
+                            <img class="img-fluid" src="./images//features/avatar.png" width="55" height="57" alt="img">
+                            <p class="card-text">"Our customer care is available for any information any time."
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- feature 6 -->
+                    <div class="card text-center mb-3">
+                        <div class="card-body">
+                            <img class="img-fluid" src="./images//features/payment.png" width="55" height="57"
+                                alt="img">
+                            <p class="card-text">"Fast Mile Pickup and Last Mile Delivery Facility for Individual Small
+                                Businesses and Corporates."
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- main part end  -->
+
     <!-- footer start  -->
     <footer>
         <div class="py-5">
