--- a/index.html
+++ b/index.html
@@ -63,6 +63,34 @@
 
     <!-- main part start  -->
     <main>
+
+        <!-- sponsor section  -->
+
+        <section class="sponsor-section container">
+            <h3 class="text-center">Sponsors</h3>
+            <div class="row row-cols-6 align-items-center mt-3">
+                <div class="col text-center">
+                    <img src="./images/sponsors/Top.png" width="82" class="img-fluid" alt="img">
+                </div>
+                <div class="col text-center">
+                    <img src="./images/sponsors/square company.png" width="30" class="img-fluid" alt="img">
+                </div>
+                <div class="col text-center">
+                    <img src="./images/sponsors/Hatil.png" width="100" class="img-fluid" alt="img">
+                </div>
+                <div class="col text-center">
+                    <img src="./images/sponsors/Rangs.png" width="110" class="img-fluid" alt="img">
+                </div>
+                <div class="col text-center">
+                    <img src="./images/sponsors/lotto.png" width="130" class="img-fluid" alt="img">
+                </div>
+                <div class="col text-center">
+                    <img src="./images/sponsors/OTOBI.png" width="60" class="img-fluid" alt="img">
+                </div>
+            </div>
+        </section>
+
+        <!-- feature-section -->
         <section class="feature-section mt-5">
             <h3 class="text-center">Why Choose Us</h3>
 
@@ -132,6 +160,8 @@
                 </div>
             </div>
         </section>
+
+
     </main>
     <!-- main part end  -->
 
