calculte section is added

--- a/index.html
+++ b/index.html
@@ -64,6 +64,114 @@
     <!-- main part start  -->
     <main>
 
+        <section class="calculate-section container">
+            <h3 class="text-center">Calculate Your Delivery Charge</h3>
+
+            <div class="row row-col-6">
+                <div class="col">
+                    <label for="from" class="form-label d-block">From</label>
+                    <select id="from" name="from" class="p-1">
+                        <option value="volvo">Dhaka City</option>
+                        <option value="saab">Saab 95</option>
+                        <option value="mercedes">Mercedes SLK</option>
+                        <option value="audi">Audi TT</option>
+                    </select>
+                </div>
+                <div class="col">
+                    <label for="destination" class="form-label d-block">Destination</label>
+                    <select id="destination" name="destination" class="p-1">
+                        <option value="volvo">Dhaka City</option>
+                        <option value="saab">Saab 95</option>
+                        <option value="mercedes">Mercedes SLK</option>
+                        <option value="audi">Audi TT</option>
+                    </select>
+                </div>
+
+                <div class="col">
+                    <label for="category" class="form-label d-block">Category</label>
+                    <select id="category" name="category" class="p-1">
+                        <option value="volvo">Regular</option>
+                        <option value="saab">Saab 95</option>
+                        <option value="mercedes">Mercedes SLK</option>
+                        <option value="audi">Audi TT</option>
+                    </select>
+                </div>
+
+                <div class="col">
+                    <label for="service" class="form-label d-block">Service</label>
+                    <select id="service" name="service" class="p-1">
+                        <option value="volvo">Regular</option>
+                        <option value="saab">Saab 95</option>
+                        <option value="mercedes">Mercedes SLK</option>
+                        <option value="audi">Audi TT</option>
+                    </select>
+                </div>
+
+                <div class="col">
+                    <label for="weight" class="form-label d-block">Weight (KG)</label>
+                    <input type="text" name="weight" id="weight" placeholder="2" class="px-1">
+                </div>
+            </div>
+
+            <div class="charge">
+                <p class="py-2">50Tk</p>
+            </div>
+
+            <div class="text-center charge-info">
+                <p>1% Cash on Delivery and Risk Management Corporation applicable</p>
+                <p>Delivery charges may vary due to parcel size</p>
+                <p>Charges are exclusive of VAT and taxes</p>
+                <p>Delivery times may vary due to unforeseen circumstances</p>
+            </div>
+        </section>
+
+        <!-- our hub section  -->
+        <section class="hub-section container">
+            <h3 class="text-center">Our Hub</h3>
+            <div class="row row-cols-6 g-3 justify-content-between">
+                <div class="col px-2 py-1 d-flex justify-content-between">
+                    <span>Badda Hub</span>
+                    <span><i class="fa-solid fa-location-dot"></i></span>
+                </div>
+                <div class="col px-2 d-flex justify-content-between">
+                    <span>Banani Hub</span>
+                    <span><i class="fa-solid fa-location-dot"></i></span>
+                </div>
+                <div class="col px-2 d-flex justify-content-between">
+                    <span>New Market Hub</span>
+                    <span><i class="fa-solid fa-location-dot"></i></span>
+                </div>
+                <div class="col px-2 d-flex justify-content-between">
+                    <span>Gulshan Hub</span>
+                    <span><i class="fa-solid fa-location-dot"></i></span>
+                </div>
+                <div class="col px-2 d-flex justify-content-between">
+                    <span>Mirpur Hub</span>
+                    <span><i class="fa-solid fa-location-dot"></i></span>
+                </div>
+                <div class="col px-2 d-flex justify-content-between">
+                    <span>Mohammadpur Hub</span>
+                    <span><i class="fa-solid fa-location-dot"></i></span>
+                </div>
+                <div class="col px-2 d-flex justify-content-between">
+                    <span>Polton Hub</span>
+                    <span><i class="fa-solid fa-location-dot"></i></span>
+                </div>
+                <div class="col px-2 d-flex justify-content-between">
+                    <span>Old Dhaka Hub</span>
+                    <span><i class="fa-solid fa-location-dot"></i></span>
+                </div>
+                <div class="col px-2 d-flex justify-content-between">
+                    <span>Uttara Hub</span>
+                    <span><i class="fa-solid fa-location-dot"></i></span>
+                </div>
+                <div class="col px-2 d-flex justify-content-between">
+                    <span>Bangla Bazar Hub</span>
+                    <span><i class="fa-solid fa-location-dot"></i></span>
+                </div>
+            </div>
+        </section>
+
         <!-- sponsor section  -->
 
         <section class="sponsor-section container">
