track-delivery section is added

--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
     <!-- main part start  -->
     <main>
 
+        <!-- track delivery  -->
+        <section class="track-delivery">
+            <div class="card mx-auto shadow-md">
+                <div class="card-body">
+                    <h5 class="card-title text-center">TRACK YOUR DELIVERY</h5>
+
+                    <div class="track-code">
+                        <input type="text" name="track-code" id="track-code" placeholder="Enter your tracking code">
+                        <button>Search</button>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- calculate section  -->
         <section class="calculate-section container">
             <h3 class="text-center">Calculate Your Delivery Charge</h3>
 
