--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <!-- header start  -->
-    <header>
+    <header class="sticky-top">
 
         <!-- navbar start  -->
         <nav class="navbar navbar-expand-lg">
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active-menu" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About Us</a>
@@ -56,6 +56,9 @@
             </div>
         </nav>
         <!-- navbar end  -->
+
+
+
     </header>
 
     <!-- header end  -->
@@ -64,6 +67,78 @@
     <!-- main part start  -->
     <main>
 
+
+        <!-- slider start  -->
+        <div id="carousel-indicators" class="carousel slide container" data-bs-ride="carousel">
+            <!-- <div class=" carousel-indicators">
+                <button type="button" data-bs-target="#carousel-indicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carousel-indicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carousel-indicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div> -->
+            <div class="carousel-inner">
+                <div class="carousel-item active ">
+
+                    <div class=" d-flex justify-content-between align-content-center align-items-center">
+                        <div>
+                            <h3>We Have <span> Fast <br> Delivery </span>To Your <br> <span>Home</span></h3>
+                            <p>We are the best fastest courier service in <br> Bangladesh which will provide you hassle
+                                free
+                                <br>
+                                service.
+                            </p>
+                        </div>
+
+                        <img src="./images/slider/slider-motor-bike.png" width="480" class="d-block img-fluid"
+                            alt="img">
+                    </div>
+                </div>
+                <div class="carousel-item">
+
+                    <div class=" d-flex justify-content-between align-content-center align-items-center">
+                        <div>
+                            <h3>We Have <span> Fast <br> Delivery </span>To Your <br> <span>Home</span></h3>
+                            <p>We are the best fastest courier service in <br> Bangladesh which will provide you hassle
+                                free
+                                <br>
+                                service.
+                            </p>
+                        </div>
+
+                        <img src="./images/slider/slider-motor-bike.png" width="480" class="d-block img-fluid"
+                            alt="img">
+                    </div>
+                </div>
+                <div class="carousel-item  ">
+
+                    <div class="d-flex justify-content-between align-content-center align-items-center">
+                        <div>
+                            <h3>We Have <span> Fast <br> Delivery </span>To Your <br> <span>Home</span></h3>
+                            <p>We are the best fastest courier service in <br> Bangladesh which will provide you hassle
+                                free
+                                <br>
+                                service.
+                            </p>
+                        </div>
+
+                        <img src="./images/slider/slider-motor-bike.png" width="480" class="d-block img-fluid"
+                            alt="img">
+                    </div>
+                </div>
+            </div>
+            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carousel-indicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel-indicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button> -->
+        </div>
         <!-- track delivery  -->
         <section class="track-delivery">
             <div class="card mx-auto shadow-md">
