--- a/index.html
+++ b/index.html
@@ -5,57 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zet express delivery</title>
+    <title>Zet express delivery - Home</title>
 
 
     <!-- font awesome link  -->
     <script src="https://kit.fontawesome.com/3b7a96cd6e.js" crossorigin="anonymous"></script>
 
     <!-- external css file  -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <!-- bootstrap css link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <!-- javascript file  -->
+    <script defer src="./js/activePage.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+        integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="./js/include-html-min.js"></script>
 </head>
 
 <body>
 
     <!-- header start  -->
-    <header class="sticky-top">
+    <header include-html="./navbar.html" class="sticky-top" id="header_file">
 
-        <!-- navbar start  -->
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img class="img-fluid" src="./images/logo/logo.png" width="82" height="47" alt="logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active-menu" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
-                        </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link">Contact Us</a>
-                        </li>
-                    </ul>
-                    <div>
-                        <button class="btn-signup rounded mr-3 border-1" role="button">Sign up</button>
-                        <button class="btn-login rounded border-0" role="button">Login</button>
-                    </div>
-                </div>
-            </div>
-        </nav>
-        <!-- navbar end  -->
 
 
 
@@ -360,50 +336,8 @@
     <!-- main part end  -->
 
     <!-- footer start  -->
-    <footer>
-        <div class="py-5">
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 flex-wrap flex-lg-nowrap">
-                <div class="col">
-                    <h3>Support</h3>
-                    <p class="mt-3"><a href="#">FAQ</a></p>
-                    <p><a href="#">Terms and Conditions</a></p>
-                </div>
-                <div class="col download">
-                    <h3>Download</h3>
-                    <img src="./images/footer/google_play_store.png" class="img-fluid" width="137" height="137"
-                        alt="google play store">
-                </div>
-                <div class="col text-center">
-                    <h3>Get in Touch</h3>
-                    <div class="mt-3">
-                        <span class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span>
-                        <span class="social-icon"><i class="fa fa-youtube" aria-hidden="true"></i></span>
-                        <span class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span>
-                    </div>
-                </div>
-                <div class="col contact">
-                    <h3>Contact Us</h3>
-                    <div class="row mt-3">
-                        <div class="col-1"><i class="fa-solid fa-location-dot"></i></div>
-                        <div class="col-11">
-                            <p>House # 30, Road # 4, PC Culture Housing, Mohammadpur , Dhaka-1207</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-1"><i class="fa-regular fa-envelope me-1"></i></div>
-                        <div class="col-11">
-                            <p>zeteexpress@gmail.com</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-1"><i class="fa-solid fa-phone-volume me-1"></i></div>
-                        <div class="col-11">
-                            <p>+8801916-888816</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <footer include-html="./footer.html" id="footer_file">
+
     </footer>
     <!-- footer end  -->
 
