--- a/about.html
+++ b/about.html
@@ -27,8 +27,42 @@
 
 <body>
 
-    header
+    <header class="sticky-top" id="header_file">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img class="img-fluid" src="./images/logo/logo.png" width="82" height="47" alt="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./about.html">About Us</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="./contact.html" class="nav-link">Contact Us</a>
+                        </li>
+                    </ul>
+                    <div>
+                        <button class="btn-signup rounded mr-3 border-1" role="button">Sign up</button>
+                        <button class="btn-login rounded border-0" role="button">Login</button>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
     <h1>About Us</h1>
+
+    <footer include-html="./footer.html" id="footer_file">
+    </footer>
 </body>
 
 </html>
