--- a/index.html
+++ b/index.html
@@ -19,22 +19,49 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <!-- javascript file  -->
-    <script defer src="./js/activePage.js"></script>
+
 
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="./js/include-html-min.js"></script>
+
+    <script defer src="./js/activePage.js"></script>
 </head>
 
 <body>
 
     <!-- header start  -->
-    <header include-html="./navbar.html" class="sticky-top" id="header_file">
+    <header class="sticky-top" id="header_file">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img class="img-fluid" src="./images/logo/logo.png" width="82" height="47" alt="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./about.html">About Us</a>
+                        </li>
 
-
-
-
-
+                        <li class="nav-item">
+                            <a href="./contact.html" class="nav-link">Contact Us</a>
+                        </li>
+                    </ul>
+                    <div>
+                        <button class="btn-signup rounded mr-3 border-1" role="button">Sign up</button>
+                        <button class="btn-login rounded border-0" role="button">Login</button>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <!-- header end  -->
@@ -337,7 +364,6 @@
 
     <!-- footer start  -->
     <footer include-html="./footer.html" id="footer_file">
-
     </footer>
     <!-- footer end  -->
 
