about page mission section is added

--- a/about.html
+++ b/about.html
@@ -59,7 +59,34 @@
             </div>
         </nav>
     </header>
-    <h1>About Us</h1>
+
+
+    <!-- main part start  -->
+    <main>
+        <h3 class="text-center my-5">About Us</h3>
+
+        <section class="mission">
+            <div class="card mx-auto shadow-md">
+                <div class="card-body text-center">
+                    <h5 class="card-title ">Our Mission</h5>
+
+                    <div class="mission-info">
+                        <p>
+                            We enable our customers to prosper by delivering their products on time in a professional
+                            manner. We will continuously challenge ourselves to exceed our customers’ expectations by
+                            providing leading-edge solutions to their needs.</p>
+                        <p>We provide the fastest delivery in iur courier. There are skilled staff here. And you can
+                            courier any item here without any hassle. Which we provide service all over Bangladesh. You
+                            can get any necessary information from our help center which provides 24 hours service.</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <section class="vision"></section>
+    </main>
+    <!-- main part end  -->
+
 
     <footer include-html="./footer.html" id="footer_file">
     </footer>
