vision section is added

--- a/about.html
+++ b/about.html
@@ -83,7 +83,20 @@
                 </div>
             </div>
         </section>
-        <section class="vision"></section>
+        <section class="vision">
+            <div class="card mx-auto shadow-md">
+                <div class="card-body text-center">
+                    <h5 class="card-title ">Our Vision</h5>
+
+                    <div class="vision-info">
+                        <p>
+                            To be the industry leader in service quality</p>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
     <!-- main part end  -->
 
