--- a/about.html
+++ b/about.html
@@ -97,6 +97,37 @@
                 </div>
             </div>
         </section>
+
+        <section class="management-team container">
+            <h3 class="text-center">Management Team</h3>
+            <div class=" d-flex justify-content-around">
+                <div class="card-box">
+                    <div class="img"></div>
+                    <div class="info text-center">
+                        <p>FOUNDER</p>
+                        <p class="fw-bold">FARJANA KHAN TOMA</p>
+                    </div>
+
+                </div>
+                <div class="card-box">
+                    <div class="img"></div>
+                    <div class="info text-center">
+                        <p>CO-FOUNDER</p>
+                        <p class="fw-bold">
+                            MEHIRIMA KHAN NUREEN</p>
+                    </div>
+                </div>
+                <div class="card-box">
+                    <div class="img"></div>
+                    <div class="info text-center">
+                        <p>CEO</p>
+                        <p class="fw-bold">
+                            NAZMUL KHAN</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
     <!-- main part end  -->
 
