--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 
         <section class="management-team container">
             <h3 class="text-center">Management Team</h3>
-            <div class=" d-flex justify-content-around">
+            <div class=" d-flex flex-column align-items-center flex-wrap flex-lg-row justify-content-lg-around">
                 <div class="card-box">
                     <div class="img"></div>
                     <div class="info text-center">
