--- a/about.html
+++ b/about.html
@@ -27,21 +27,21 @@
 
 <body>
 
-    <header class="sticky-top" id="header_file">
+    <header class="sticky-top">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img class="img-fluid" src="./images/logo/logo.png" width="82" height="47" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                    data-bs-target="#navbarAboutContent" aria-controls="navbarAboutContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <div class="collapse navbar-collapse" id="navbarAboutContent">
+                    <ul class="navbar-nav ms-auto p-3 mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./about.html">About Us</a>
@@ -51,7 +51,7 @@
                             <a href="./contact.html" class="nav-link">Contact Us</a>
                         </li>
                     </ul>
-                    <div>
+                    <div class="p-3">
                         <button class="btn-signup rounded mr-3 border-1" role="button">Sign up</button>
                         <button class="btn-login rounded border-0" role="button">Login</button>
                     </div>
@@ -134,6 +134,11 @@
 
     <footer include-html="./footer.html" id="footer_file">
     </footer>
+
+    <!-- bootstrap js link  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
