--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto p-3 mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./about.html">About Us</a>
@@ -55,7 +55,7 @@
                             <a href="./contact.html" class="nav-link">Contact Us</a>
                         </li>
                     </ul>
-                    <div>
+                    <div class="p-3">
                         <button class="btn-signup rounded mr-3 border-1" role="button">Sign up</button>
                         <button class="btn-login rounded border-0" role="button">Login</button>
                     </div>
