--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 
     <!-- main part start  -->
     <main>
-        <section class="contact">
+        <section class="contact-section">
             <h3 class="text-center">Contact Us</h3>
 
             <div class="contact-form container">
