--- a/faq.html
+++ b/faq.html
@@ -6,18 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zet express delivery - FAQ</title>
+
     <!-- font awesome link  -->
     <script src="https://kit.fontawesome.com/3b7a96cd6e.js" crossorigin="anonymous"></script>
 
 
 
-    <!-- css link  -->
-    <link rel="stylesheet" href="./css/faq.css">
+
 
 
     <!-- bootstrap css link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <!-- css link  -->
+    <link rel="stylesheet" href="./css/faq.css">
 
     <!-- js files  -->
 
@@ -63,6 +66,181 @@
 
     <main>
         <h3 class="text-center">FAQ</h3>
+
+        <section class="faq container">
+
+            <!-- first que  -->
+            <div class="faq-card d-flex justify-content-between align-items-center px-3">
+                <p class="que mb-0">How can I take delivery?</p>
+                <button class="btn" data-bs-toggle="modal" data-bs-target="#modalOne"><img src="./images/faq/add.png"
+                        class="img-fluid" alt="img"></button>
+            </div>
+
+
+            <!--Que 1 Modal -->
+            <div class="modal fade" id="modalOne" aria-labelledby="modalOneLabel" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                    <div class="modal-content">
+                        <div class="d-flex justify-content-between px-4 pt-4">
+                            <h1 class="modal-title " id="modalOneLabel">How can I take delivery?</h1>
+                            <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">
+                                <img src="./images/faq/remove.png" class="img-fluid" alt="img">
+                            </button>
+                        </div>
+                        <div class="modal-body mx-2">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- second que  -->
+            <div class="faq-card d-flex justify-content-between align-items-center px-3">
+                <p class="que mb-0">What are the feature of your courier?</p>
+                <button class="btn" data-bs-toggle="modal" data-bs-target="#modalTwo"><img src="./images/faq/add.png"
+                        class="img-fluid" alt="img"></button>
+            </div>
+
+
+            <!--Que 2 Modal -->
+            <div class="modal fade" id="modalTwo" aria-labelledby="modalTwoLabel" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                    <div class="modal-content">
+                        <div class="d-flex justify-content-between px-4 pt-4">
+                            <h1 class="modal-title " id="modalTwoLabel">What are the feature of your courier?</h1>
+                            <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">
+                                <img src="./images/faq/remove.png" class="img-fluid" alt="img">
+                            </button>
+                        </div>
+                        <div class="modal-body mx-2">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <!-- third que  -->
+            <div class="faq-card d-flex justify-content-between align-items-center px-3">
+                <p class="que mb-0">How are your exchange rates calculated?</p>
+                <button class="btn" data-bs-toggle="modal" data-bs-target="#modalThree"><img src="./images/faq/add.png"
+                        class="img-fluid" alt="img"></button>
+            </div>
+
+
+            <!--Que 3 Modal -->
+            <div class="modal fade" id="modalThree" aria-labelledby="modalThreeLabel" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                    <div class="modal-content">
+                        <div class="d-flex justify-content-between px-4 pt-4">
+                            <h1 class="modal-title " id="modalThreeLabel">How are your exchange rates calculated?</h1>
+                            <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">
+                                <img src="./images/faq/remove.png" class="img-fluid" alt="img">
+                            </button>
+                        </div>
+                        <div class="modal-body mx-2">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <!--  que 4 -->
+            <div class="faq-card d-flex justify-content-between align-items-center px-3">
+                <p class="que mb-0">How are your exchange rates calculated?</p>
+                <button class="btn" data-bs-toggle="modal" data-bs-target="#modalFour"><img src="./images/faq/add.png"
+                        class="img-fluid" alt="img"></button>
+            </div>
+
+
+            <!--Que 4 Modal -->
+            <div class="modal fade" id="modalFour" aria-labelledby="modalFourLabel" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                    <div class="modal-content">
+                        <div class="d-flex justify-content-between px-4 pt-4">
+                            <h1 class="modal-title " id="modalFourLabel">How are your exchange rates calculated?</h1>
+                            <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">
+                                <img src="./images/faq/remove.png" class="img-fluid" alt="img">
+                            </button>
+                        </div>
+                        <div class="modal-body mx-2">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+            <!--  que 5 -->
+            <div class="faq-card d-flex justify-content-between align-items-center px-3">
+                <p class="que mb-0">How are your exchange rates calculated?</p>
+                <button class="btn" data-bs-toggle="modal" data-bs-target="#modalFive"><img src="./images/faq/add.png"
+                        class="img-fluid" alt="img"></button>
+            </div>
+
+
+            <!--Que 5 Modal -->
+            <div class="modal fade" id="modalFive" aria-labelledby="modalFiveLabel" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                    <div class="modal-content">
+                        <div class="d-flex justify-content-between px-4 pt-4">
+                            <h1 class="modal-title " id="modalFiveLabel">How are your exchange rates calculated?</h1>
+                            <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">
+                                <img src="./images/faq/remove.png" class="img-fluid" alt="img">
+                            </button>
+                        </div>
+                        <div class="modal-body mx-2">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <!--  que 6 -->
+            <div class="faq-card d-flex justify-content-between align-items-center px-3">
+                <p class="que mb-0">How are your exchange rates calculated?</p>
+                <button class="btn" data-bs-toggle="modal" data-bs-target="#modalSix"><img src="./images/faq/add.png"
+                        class="img-fluid" alt="img"></button>
+            </div>
+
+
+            <!--Que 6 Modal -->
+            <div class="modal fade" id="modalSix" aria-labelledby="modalSixLabel" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                    <div class="modal-content">
+                        <div class="d-flex justify-content-between px-4 pt-4">
+                            <h1 class="modal-title " id="modalSixLabel">How are your exchange rates calculated?</h1>
+                            <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">
+                                <img src="./images/faq/remove.png" class="img-fluid" alt="img">
+                            </button>
+                        </div>
+                        <div class="modal-body mx-2">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
     </main>
 
     <footer include-html="./footer.html" id="footer_file">
