--- a/footer.html
+++ b/footer.html
@@ -1,21 +1,21 @@
 <div class="py-5">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 flex-wrap flex-lg-nowrap">
-        <div class="col">
+        <div class="col support">
             <h3>Support</h3>
-            <p class="mt-3"><a href="#">FAQ</a></p>
-            <p><a href="#">Terms and Conditions</a></p>
+            <p class="mt-3"><a href="./faq.html">FAQ</a></p>
+            <p><a href="./terms-condition.html">Terms and Conditions</a></p>
         </div>
         <div class="col download">
             <h3>Download</h3>
             <img src="./images/footer/google_play_store.png" class="img-fluid" width="137" height="137"
                 alt="google play store">
         </div>
-        <div class="col text-center">
+        <div class="col mb-5">
             <h3>Get in Touch</h3>
             <div class="mt-3">
-                <span class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span>
-                <span class="social-icon"><i class="fa fa-youtube" aria-hidden="true"></i></span>
-                <span class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span>
+                <a href="#" class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="#" class="social-icon"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+                <a href="#" class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </div>
         </div>
         <div class="col contact">
