favicon is added

--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zet express delivery - About Us</title>
 
+    <!-- favicon  -->
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
     <!-- font awesome link  -->
     <script src="https://kit.fontawesome.com/3b7a96cd6e.js" crossorigin="anonymous"></script>
 
