--- a/terms-condition.html
+++ b/terms-condition.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zet express delivery - Terms & Conditions</title>
+
+
+    <!-- favicon  -->
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
     <!-- font awesome link  -->
     <script src="https://kit.fontawesome.com/3b7a96cd6e.js" crossorigin="anonymous"></script>
 
