track code section button responsive issue is solved

--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
 
                     <div class="track-code">
                         <input type="text" name="track-code" id="track-code" placeholder="Enter your tracking code">
-                        <button>Search</button>
+                        <button>
+                            <p class="m-0">Search</p>
+                        </button>
                     </div>
 
                 </div>
