--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
             <h3 class="text-center">Contact Us</h3>
 
             <div class="contact-form container">
-                <div class="row row-cols-1  row-cols-lg-4">
+                <div class="row row-cols-1 row-cols-lg-4 align-items-lg-center">
                     <div class="col me-4">
                         <div class="mb-4">
                             <div class="contact-card text-center">
