--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- header start  -->
     <header class="sticky-top" id="header_file">
         <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand" href="#">
+            <div class="container-lg p-0">
+                <a class="navbar-brand ms-3 ms-md-0" href="#">
                     <img class="img-fluid" src="./images/logo/logo.png" width="82" height="47" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -45,7 +45,7 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto p-3 mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" href="./index.html">Home</a>
