--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <!-- our hub section  -->
         <section class="hub-section container">
             <h3 class="text-center">Our Hub</h3>
-            <div class="row row-cols-6 g-3 justify-content-sm-between">
+            <div class="row row-cols-2 row-cols-md-6 g-3 justify-content-lg-between">
                 <div class="col px-2 py-1 d-flex justify-content-between">
                     <span>Badda Hub</span>
                     <span><i class="fa-solid fa-location-dot"></i></span>
