--- a/faq.html
+++ b/faq.html
@@ -35,9 +35,9 @@
 
 <body>
     <header class="sticky-top" id="header_file">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand" href="#">
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-lg p-0">
+                <a class="navbar-brand ms-3 ms-md-0" href="#">
                     <img class="img-fluid" src="./images/logo/logo.png" width="82" height="47" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
