Favicon is added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Zet express delivery - Home</title>
 
     <!-- favicon  -->
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
 
 
     <!-- font awesome link  -->
