--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <title>Zet express delivery - FAQ</title>
 
     <!-- favicon  -->
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
 
     <!-- font awesome link  -->
     <script src="https://kit.fontawesome.com/3b7a96cd6e.js" crossorigin="anonymous"></script>
