--- a/terms-condition.html
+++ b/terms-condition.html
@@ -9,10 +9,11 @@
 
 
     <!-- favicon  -->
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico>
 
     <!-- font awesome link  -->
-    <script src="https://kit.fontawesome.com/3b7a96cd6e.js" crossorigin="anonymous"></script>
+    <script src=" https://kit.fontawesome.com/3b7a96cd6e.js" crossorigin="anonymous">
+    </script>
 
 
 
