--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,8 @@
         </div>
         <div class="col mb-5">
             <h3>Get in Touch</h3>
-            <div class="mt-3">
+            <div
+                class="mt-3 d-flex flex-column justify-content-center align-items-center justify-content-lg-start flex-lg-row">
                 <a href="#" class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="#" class="social-icon"><i class="fa fa-youtube" aria-hidden="true"></i></a>
                 <a href="#" class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></a>
