--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
             </div>
         </section>
         <!-- calculate section  -->
-        <section class="calculate-section container">
+        <section class="calculate-section ">
             <h3 class="text-center">Calculate Your Delivery Charge</h3>
 
-            <div class="row  row-cols-1 g-3  row-cols-lg-6">
+            <div class="row  row-cols-1 g-3  row-cols-lg-6 justify-content-center">
                 <div class="col">
                     <label for="from" class="form-label d-block">From</label>
                     <select id="from" name="from" class="p-1">
