--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="carousel-item active ">
 
                     <div
-                        class="d-flex flex-column  flex-md-row  justify-content-md-between align-content-md-center align-items-md-center">
+                        class="d-flex flex-column  flex-md-row justify-content-evenly  justify-content-md-between align-content-md-center align-items-md-center">
                         <div>
                             <h3 class="text-center text-md-start">We Have <span> Fast <br> Delivery </span>To Your <br>
                                 <span>Home</span>
